--- a/source/_posts/笔记.md
+++ b/source/_posts/笔记.md
@@ -1,7 +1,14 @@
 ---
-title: 笔记
+title: 搭建个人博客
 date: 2018-12-24 14:57:58
 tags:
+- hexo
+- github
+- 域名
+categories:
+- 笔记
+- 教程
+cover_picture: /images/akk.jpg
 ---
 hexo +github 搭建个人博客
 # node环境配置
@@ -59,9 +66,34 @@ hexo s
 ##编译代码
 通过hexo框架将md格式的文档转换为html+css+js
 hexo g
-##推送
+## 推送
 1. 安装deploy依赖包
 npm install hexo-deployer-git --save
 2. 上传
 hexo d
 
+
+## 克隆到本地电脑
+git@github.com:abkkeivin/blog.git
+
+# 程序网站
+http://www.runoob.com/
+
+# 域名绑定
+## 域名解析
+
+记录类型|主机记录|记录值
+-|-|-
+CNAME|www|用户名.github.io
+A|@|192.30.252.153
+A|@|192.30.252.154
+
+## 创建CNAME
+在blog/source路径下新建一个叫CNAME的文件（不带后缀）
+在文件内填写自己的域名，如：baidu.com
+
+
+# 额外福利:
+
+### 分享一个翻墙博客
+www.91h5.cc (不限速的)
